# zg_choir

./: .gitignore  .gitmodules  CMakeLists.txt  HISTORY.txt  HOW_TO_BUILD.txt  LICENSE  README.md
demos/choir/: ChoirNameSpace.h  ChoirProtocol.cpp  ChoirProtocol.h  ChoirSession.cpp  ChoirSession.h  ChoirThread.cpp  ChoirThread.h  ChoirWindow.cpp  ChoirWindow.h  MusicData.cpp  MusicData.h  MusicSheet.cpp  MusicSheet.h  MusicSheetPlayer.cpp  MusicSheetPlayer.h  MusicSheetWidget.cpp  MusicSheetWidget.h  NoteAssignmentsMap.cpp  NoteAssignmentsMap.h  PlaybackState.cpp  PlaybackState.h  Quasimodo.cpp  Quasimodo.h  RosterWidget.cpp  RosterWidget.h  choir.cpp  choir.pro  package_for_macosx.sh  package_for_windows.bat  package_source.sh  zg_choir.iss
demos/choir/html/: README.html
demos/choir/images/: bell.png.icns  bell.png.rc  images.qrc
demos/choir/samples/: samples.qrc
demos/choir/songs/: fight_song.choirMusic  hallelujah.choirMusic  ode_to_joy.choirMusic  three_blind_mice.choirMusic
demos/fridge/: README_DEVELOPER.txt  README_USER.txt
demos/fridge/client/: ChatTextEntry.h  ClientRosterList.cpp  ClientRosterList.h  FridgeChatView.cpp  FridgeChatView.h  FridgeClientCanvas.cpp  FridgeClientCanvas.h  FridgeClientWindow.cpp  FridgeClientWindow.h  MagnetState.h  TimeSyncWidget.cpp  TimeSyncWidget.h  common_names_list.txt  common_words_list.txt  fridge_client.pro  main.cpp
demos/fridge/common/: FridgeConstants.h  FridgeNameSpace.h
demos/fridge/server/: FridgeServer.cpp  FridgeServer.h  FridgeServerProcess.cpp  FridgeServerWindow.cpp  FridgeServerWindow.h  common_words_list.txt  disable_app_nap.mm  fridge_server.pro  main.cpp
html/: README_DEVELOPERS.html
html/autodocs/: genDocs.sh  zg.dox
include/zg/: IDatabaseObject.h  INetworkInterfaceFilter.h  INetworkTimeProvider.h  ITextCommandReceiver.h  ZGConstants.h  ZGDatabasePeerSession.h  ZGMessageTreeDatabaseObject.h  ZGMessageTreeDatabasePeerSession.h  ZGNameSpace.h  ZGPeerID.h  ZGPeerSession.h  ZGPeerSettings.h  ZGStdinSession.h
include/zg/callback/: ICallbackMechanism.h  ICallbackSubscriber.h  SocketCallbackMechanism.h
include/zg/clocksync/: ZGTimeAverager.h
include/zg/connector/: ClientConnector.h
include/zg/discovery/client/: IDiscoveryNotificationTarget.h  SystemDiscoveryClient.h
include/zg/discovery/common/: DiscoveryConstants.h  DiscoveryUtilityFunctions.h
include/zg/discovery/server/: DiscoveryServerSession.h  IDiscoveryServerSessionController.h
include/zg/gateway/: IGateway.h  IGatewaySubscriber.h  INetworkMessageSender.h
include/zg/gateway/tree/: ClientSideNetworkTreeGateway.h  DummyTreeGateway.h  ITreeGateway.h  ITreeGatewaySubscriber.h  MuxTreeGateway.h  NetworkTreeGateway.h  ProxyTreeGateway.h  ServerSideNetworkTreeGatewaySubscriber.h  TreeClientSideSession.h  TreeServerSideSession.h
include/zg/messagetree/client/: ClientSideMessageTreeSession.h  ClientSideNetworkTreeGateway.h  MessageTreeClientConnector.h  TestTreeGatewaySubscriber.h  TreeClientSideSession.h
include/zg/messagetree/gateway/: DummyTreeGateway.h  ITreeGateway.h  ITreeGatewaySubscriber.h  MuxTreeGateway.h  ProxyTreeGateway.h  SymlinkLogicMuxTreeGateway.h  TreeConstants.h
include/zg/messagetree/server/: ClientDataMessageTreeDatabaseObject.h  MessageTreeDatabaseObject.h  MessageTreeDatabasePeerSession.h  ServerSideMessageTreeSession.h  ServerSideMessageUtilityFunctions.h  ServerSideNetworkTreeGatewaySubscriber.h  TreeServerSideSession.h  UndoStackMessageTreeDatabaseObject.h  ZGMessageTreeDatabaseObject.h  (+1 more)
include/zg/private/: PZGBeaconData.h  PZGCaffeine.h  PZGConstants.h  PZGDatabaseState.h  PZGDatabaseStateInfo.h  PZGDatabaseUpdate.h  PZGHeartbeatPacket.h  PZGHeartbeatPeerInfo.h  PZGHeartbeatSession.h  PZGHeartbeatSettings.h  PZGHeartbeatSourceKey.h  PZGHeartbeatSourceState.h  PZGHeartbeatThreadState.h  PZGNameSpace.h  PZGNetworkIOSession.h  PZGRoundTripTimeAverager.h  PZGThreadedSession.h  PZGUnicastSession.h  PZGUpdateBackOrderKey.h
include/zg/test/: TestTreeGatewaySubscriber.h
include/zg/udp/: IUDPMulticastNotificationTarget.h  UDPMulticastTransceiver.h
src/: ZGDatabasePeerSession.cpp  ZGMessageTreeDatabaseObject.cpp  ZGMessageTreeDatabasePeerSession.cpp  ZGPeerSession.cpp  ZGStdinSession.cpp
src/callback/: ICallbackMechanism.cpp  SocketCallbackMechanism.cpp
src/clocksync/: ZGTimeAverager.cpp
src/connector/: ClientConnector.cpp
src/discovery/client/: SystemDiscoveryClient.cpp
src/discovery/common/: DiscoveryUtilityFunctions.cpp
src/discovery/server/: DiscoveryServerSession.cpp
src/gateway/: IGateway.cpp
src/gateway/tree/: DummyTreeGateway.cpp  ITreeGateway.cpp  ITreeGatewaySubscriber.cpp  MuxTreeGateway.cpp  NetworkTreeGateway.cpp  ProxyTreeGateway.cpp  TreeClientSideSession.cpp  TreeServerSideSession.cpp
src/messagetree/client/: ClientSideMessageTreeSession.cpp  MessageTreeClientConnector.cpp  TestTreeGatewaySubscriber.cpp  TreeClientSideSession.cpp
src/messagetree/gateway/: DummyTreeGateway.cpp  ITreeGatewaySubscriber.cpp  MuxTreeGateway.cpp  NetworkTreeGateway.cpp  ProxyTreeGateway.cpp  SymlinkLogicMuxTreeGateway.cpp
src/messagetree/server/: ClientDataMessageTreeDatabaseObject.cpp  MessageTreeDatabaseObject.cpp  MessageTreeDatabasePeerSession.cpp  ServerSideMessageTreeSession.cpp  ServerSideMessageUtilityFunctions.cpp  TreeServerSideSession.cpp  UndoStackMessageTreeDatabaseObject.cpp  ZGMessageTreeDatabaseObject.cpp  ZGMessageTreeDatabasePeerSession.cpp
src/private/: PZGBeaconData.cpp  PZGCaffeine.cpp  PZGConstants.cpp  PZGDatabaseState.cpp  PZGDatabaseStateInfo.cpp  PZGDatabaseUpdate.cpp  PZGHeartbeatPacket.cpp  PZGHeartbeatPeerInfo.cpp  PZGHeartbeatSession.cpp  PZGHeartbeatSettings.cpp  PZGHeartbeatSourceState.cpp  PZGHeartbeatThreadState.cpp  PZGNetworkIOSession.cpp  PZGThreadedSession.cpp  PZGUnicastSession.cpp  disable_app_nap.mm
src/udp/: UDPMulticastTransceiver.cpp
tests/: Makefile  TestTreeGatewaySubscriber.cpp  connector_client.cpp  discovery_client.cpp  test_peer.cpp  test_udp_multicast_transceiver.cpp  tree_client.cpp  tree_peer.cpp  tree_server.cpp
(+1 files in other folders)
